--- a/testapidocs/src-html/org/microbean/kubernetes/controller/cdi/TestEventDistribution.html
+++ b/testapidocs/src-html/org/microbean/kubernetes/controller/cdi/TestEventDistribution.html
@@ -50,7 +50,7 @@
 <span class="sourceLineNo">042</span><a name="line.42"></a>
 <span class="sourceLineNo">043</span>import io.fabric8.kubernetes.client.KubernetesClient;<a name="line.43"></a>
 <span class="sourceLineNo">044</span><a name="line.44"></a>
-<span class="sourceLineNo">045</span>import io.fabric8.kubernetes.client.dsl.Operation;<a name="line.45"></a>
+<span class="sourceLineNo">045</span>import io.fabric8.kubernetes.client.dsl.NonNamespaceOperation;<a name="line.45"></a>
 <span class="sourceLineNo">046</span>import io.fabric8.kubernetes.client.dsl.Resource;<a name="line.46"></a>
 <span class="sourceLineNo">047</span><a name="line.47"></a>
 <span class="sourceLineNo">048</span>import org.junit.BeforeClass;<a name="line.48"></a>
@@ -65,86 +65,96 @@
 <span class="sourceLineNo">057</span><a name="line.57"></a>
 <span class="sourceLineNo">058</span>import static org.junit.Assert.assertEquals;<a name="line.58"></a>
 <span class="sourceLineNo">059</span>import static org.junit.Assert.assertNotNull;<a name="line.59"></a>
-<span class="sourceLineNo">060</span>import static org.junit.Assume.assumeFalse;<a name="line.60"></a>
-<span class="sourceLineNo">061</span><a name="line.61"></a>
-<span class="sourceLineNo">062</span>@ApplicationScoped<a name="line.62"></a>
-<span class="sourceLineNo">063</span>public class TestEventDistribution {<a name="line.63"></a>
-<span class="sourceLineNo">064</span><a name="line.64"></a>
-<span class="sourceLineNo">065</span>  <a name="line.65"></a>
-<span class="sourceLineNo">066</span>  /*<a name="line.66"></a>
-<span class="sourceLineNo">067</span>   * Static fields.<a name="line.67"></a>
-<span class="sourceLineNo">068</span>   */<a name="line.68"></a>
-<span class="sourceLineNo">069</span><a name="line.69"></a>
-<span class="sourceLineNo">070</span>  <a name="line.70"></a>
-<span class="sourceLineNo">071</span>  /**<a name="line.71"></a>
-<span class="sourceLineNo">072</span>   * The number of instances of this class that have been created (in<a name="line.72"></a>
-<span class="sourceLineNo">073</span>   * the context of JUnit execution; any other usage is undefined).<a name="line.73"></a>
-<span class="sourceLineNo">074</span>   */<a name="line.74"></a>
-<span class="sourceLineNo">075</span>  private static int instanceCount;<a name="line.75"></a>
-<span class="sourceLineNo">076</span><a name="line.76"></a>
+<span class="sourceLineNo">060</span>import static org.junit.Assert.assertTrue;<a name="line.60"></a>
+<span class="sourceLineNo">061</span>import static org.junit.Assume.assumeFalse;<a name="line.61"></a>
+<span class="sourceLineNo">062</span><a name="line.62"></a>
+<span class="sourceLineNo">063</span>@ApplicationScoped<a name="line.63"></a>
+<span class="sourceLineNo">064</span>public class TestEventDistribution {<a name="line.64"></a>
+<span class="sourceLineNo">065</span><a name="line.65"></a>
+<span class="sourceLineNo">066</span>  <a name="line.66"></a>
+<span class="sourceLineNo">067</span>  /*<a name="line.67"></a>
+<span class="sourceLineNo">068</span>   * Static fields.<a name="line.68"></a>
+<span class="sourceLineNo">069</span>   */<a name="line.69"></a>
+<span class="sourceLineNo">070</span><a name="line.70"></a>
+<span class="sourceLineNo">071</span>  <a name="line.71"></a>
+<span class="sourceLineNo">072</span>  /**<a name="line.72"></a>
+<span class="sourceLineNo">073</span>   * The number of instances of this class that have been created (in<a name="line.73"></a>
+<span class="sourceLineNo">074</span>   * the context of JUnit execution; any other usage is undefined).<a name="line.74"></a>
+<span class="sourceLineNo">075</span>   */<a name="line.75"></a>
+<span class="sourceLineNo">076</span>  private static int instanceCount;<a name="line.76"></a>
 <span class="sourceLineNo">077</span><a name="line.77"></a>
-<span class="sourceLineNo">078</span>  /*<a name="line.78"></a>
-<span class="sourceLineNo">079</span>   * Constructors.<a name="line.79"></a>
-<span class="sourceLineNo">080</span>   */<a name="line.80"></a>
-<span class="sourceLineNo">081</span><a name="line.81"></a>
-<span class="sourceLineNo">082</span>  public TestEventDistribution() {<a name="line.82"></a>
-<span class="sourceLineNo">083</span>    super();<a name="line.83"></a>
-<span class="sourceLineNo">084</span>    instanceCount++;<a name="line.84"></a>
-<span class="sourceLineNo">085</span>  }<a name="line.85"></a>
-<span class="sourceLineNo">086</span><a name="line.86"></a>
-<span class="sourceLineNo">087</span>  @Produces<a name="line.87"></a>
-<span class="sourceLineNo">088</span>  @ApplicationScoped<a name="line.88"></a>
-<span class="sourceLineNo">089</span>  @AllConfigMapEvents<a name="line.89"></a>
-<span class="sourceLineNo">090</span>  private static final Operation&lt;ConfigMap, ConfigMapList, DoneableConfigMap, Resource&lt;ConfigMap, DoneableConfigMap&gt;&gt; selectAllConfigMaps(final KubernetesClient client) {<a name="line.90"></a>
-<span class="sourceLineNo">091</span>    return client.configMaps();<a name="line.91"></a>
-<span class="sourceLineNo">092</span>  }<a name="line.92"></a>
-<span class="sourceLineNo">093</span><a name="line.93"></a>
-<span class="sourceLineNo">094</span>  @Produces<a name="line.94"></a>
-<span class="sourceLineNo">095</span>  @ApplicationScoped<a name="line.95"></a>
-<span class="sourceLineNo">096</span>  @AllConfigMapEvents<a name="line.96"></a>
-<span class="sourceLineNo">097</span>  private static final Map&lt;Object, ConfigMap&gt; produceCache() {<a name="line.97"></a>
-<span class="sourceLineNo">098</span>    return new HashMap&lt;&gt;();<a name="line.98"></a>
-<span class="sourceLineNo">099</span>  }<a name="line.99"></a>
-<span class="sourceLineNo">100</span><a name="line.100"></a>
-<span class="sourceLineNo">101</span>  private final void onConfigMapSynchronizationAddition(@ObservesAsync @AllConfigMapEvents @Added(synchronization = true) final ConfigMap configMap) {<a name="line.101"></a>
-<span class="sourceLineNo">102</span>    assertNotNull(configMap);<a name="line.102"></a>
-<span class="sourceLineNo">103</span>  }<a name="line.103"></a>
-<span class="sourceLineNo">104</span>  <a name="line.104"></a>
-<span class="sourceLineNo">105</span>  private final void onConfigMapModification(@ObservesAsync @AllConfigMapEvents @Modified final ConfigMap configMap, @Prior final Optional&lt;ConfigMap&gt; prior, @AllConfigMapEvents final Map&lt;Object, ConfigMap&gt; cache) {<a name="line.105"></a>
-<span class="sourceLineNo">106</span>    assertNotNull(configMap);<a name="line.106"></a>
-<span class="sourceLineNo">107</span>    assertNotNull(cache);<a name="line.107"></a>
-<span class="sourceLineNo">108</span>    org.microbean.cdi.AbstractBlockingExtension.unblockAll();<a name="line.108"></a>
-<span class="sourceLineNo">109</span>  }<a name="line.109"></a>
-<span class="sourceLineNo">110</span><a name="line.110"></a>
-<span class="sourceLineNo">111</span>  private final void onStartup(@Observes @Initialized(ApplicationScoped.class) final Object event, final KubernetesControllerExtension extension) throws InterruptedException {<a name="line.111"></a>
-<span class="sourceLineNo">112</span>    assertNotNull(extension);<a name="line.112"></a>
-<span class="sourceLineNo">113</span>  }<a name="line.113"></a>
-<span class="sourceLineNo">114</span>  <a name="line.114"></a>
-<span class="sourceLineNo">115</span>  @Test<a name="line.115"></a>
-<span class="sourceLineNo">116</span>  public void testContainerStartup() {<a name="line.116"></a>
-<span class="sourceLineNo">117</span>    assumeFalse(Boolean.getBoolean("skipClusterTests"));<a name="line.117"></a>
-<span class="sourceLineNo">118</span>    System.setProperty("port", "8080");<a name="line.118"></a>
-<span class="sourceLineNo">119</span>    final int oldInstanceCount = instanceCount;<a name="line.119"></a>
-<span class="sourceLineNo">120</span>    assertEquals(1, oldInstanceCount);<a name="line.120"></a>
-<span class="sourceLineNo">121</span>    Main.main(null);<a name="line.121"></a>
-<span class="sourceLineNo">122</span>    assertEquals(oldInstanceCount + 1, instanceCount);<a name="line.122"></a>
+<span class="sourceLineNo">078</span><a name="line.78"></a>
+<span class="sourceLineNo">079</span>  /*<a name="line.79"></a>
+<span class="sourceLineNo">080</span>   * Constructors.<a name="line.80"></a>
+<span class="sourceLineNo">081</span>   */<a name="line.81"></a>
+<span class="sourceLineNo">082</span><a name="line.82"></a>
+<span class="sourceLineNo">083</span>  public TestEventDistribution() {<a name="line.83"></a>
+<span class="sourceLineNo">084</span>    super();<a name="line.84"></a>
+<span class="sourceLineNo">085</span>    instanceCount++;<a name="line.85"></a>
+<span class="sourceLineNo">086</span>  }<a name="line.86"></a>
+<span class="sourceLineNo">087</span><a name="line.87"></a>
+<span class="sourceLineNo">088</span>  @Produces<a name="line.88"></a>
+<span class="sourceLineNo">089</span>  @ApplicationScoped<a name="line.89"></a>
+<span class="sourceLineNo">090</span>  @AllDefaultConfigMapEvents<a name="line.90"></a>
+<span class="sourceLineNo">091</span>  private static final NonNamespaceOperation&lt;ConfigMap, ConfigMapList, DoneableConfigMap, Resource&lt;ConfigMap, DoneableConfigMap&gt;&gt; selectAllDefaultConfigMaps(final KubernetesClient client) {<a name="line.91"></a>
+<span class="sourceLineNo">092</span>    return client.configMaps().inNamespace("default");<a name="line.92"></a>
+<span class="sourceLineNo">093</span>  }<a name="line.93"></a>
+<span class="sourceLineNo">094</span><a name="line.94"></a>
+<span class="sourceLineNo">095</span>  @Produces<a name="line.95"></a>
+<span class="sourceLineNo">096</span>  @ApplicationScoped<a name="line.96"></a>
+<span class="sourceLineNo">097</span>  @AllDefaultConfigMapEvents<a name="line.97"></a>
+<span class="sourceLineNo">098</span>  private static final Map&lt;Object, ConfigMap&gt; produceCache() {<a name="line.98"></a>
+<span class="sourceLineNo">099</span>    return new HashMap&lt;&gt;();<a name="line.99"></a>
+<span class="sourceLineNo">100</span>  }<a name="line.100"></a>
+<span class="sourceLineNo">101</span><a name="line.101"></a>
+<span class="sourceLineNo">102</span>  private final void onConfigMapSynchronizationAddition(@ObservesAsync @AllDefaultConfigMapEvents @Added(synchronization = true) final ConfigMap configMap) {<a name="line.102"></a>
+<span class="sourceLineNo">103</span>    assertNotNull(configMap);<a name="line.103"></a>
+<span class="sourceLineNo">104</span>  }<a name="line.104"></a>
+<span class="sourceLineNo">105</span>  <a name="line.105"></a>
+<span class="sourceLineNo">106</span>  private final void onConfigMapModification(@ObservesAsync<a name="line.106"></a>
+<span class="sourceLineNo">107</span>                                             @AllDefaultConfigMapEvents<a name="line.107"></a>
+<span class="sourceLineNo">108</span>                                             @Modified<a name="line.108"></a>
+<span class="sourceLineNo">109</span>                                             final ConfigMap configMap,<a name="line.109"></a>
+<span class="sourceLineNo">110</span>                                             @Prior<a name="line.110"></a>
+<span class="sourceLineNo">111</span>                                             final Optional&lt;ConfigMap&gt; prior,<a name="line.111"></a>
+<span class="sourceLineNo">112</span>                                             @AllDefaultConfigMapEvents<a name="line.112"></a>
+<span class="sourceLineNo">113</span>                                             final Map&lt;Object, ConfigMap&gt; cache) {<a name="line.113"></a>
+<span class="sourceLineNo">114</span>    assertNotNull(configMap);<a name="line.114"></a>
+<span class="sourceLineNo">115</span>    assertNotNull(cache);<a name="line.115"></a>
+<span class="sourceLineNo">116</span>    assertNotNull(prior);<a name="line.116"></a>
+<span class="sourceLineNo">117</span>    assertTrue("prior is not present", prior.isPresent());<a name="line.117"></a>
+<span class="sourceLineNo">118</span>    org.microbean.cdi.AbstractBlockingExtension.unblockAll();<a name="line.118"></a>
+<span class="sourceLineNo">119</span>  }<a name="line.119"></a>
+<span class="sourceLineNo">120</span><a name="line.120"></a>
+<span class="sourceLineNo">121</span>  private final void onStartup(@Observes @Initialized(ApplicationScoped.class) final Object event, final KubernetesControllerExtension extension) throws InterruptedException {<a name="line.121"></a>
+<span class="sourceLineNo">122</span>    assertNotNull(extension);<a name="line.122"></a>
 <span class="sourceLineNo">123</span>  }<a name="line.123"></a>
-<span class="sourceLineNo">124</span><a name="line.124"></a>
-<span class="sourceLineNo">125</span>  @BeforeClass<a name="line.125"></a>
-<span class="sourceLineNo">126</span>  public static void setUpLogging() {<a name="line.126"></a>
-<span class="sourceLineNo">127</span>    System.setProperty("java.util.logging.config.file", Thread.currentThread().getContextClassLoader().getResource("logging.properties").getPath());<a name="line.127"></a>
-<span class="sourceLineNo">128</span>  }<a name="line.128"></a>
-<span class="sourceLineNo">129</span><a name="line.129"></a>
-<span class="sourceLineNo">130</span>  @Documented<a name="line.130"></a>
-<span class="sourceLineNo">131</span>  @KubernetesEventSelector<a name="line.131"></a>
-<span class="sourceLineNo">132</span>  @Qualifier<a name="line.132"></a>
-<span class="sourceLineNo">133</span>  @Retention(value = RetentionPolicy.RUNTIME)<a name="line.133"></a>
-<span class="sourceLineNo">134</span>  @Target({ ElementType.METHOD, ElementType.PARAMETER })<a name="line.134"></a>
-<span class="sourceLineNo">135</span>  private @interface AllConfigMapEvents {<a name="line.135"></a>
-<span class="sourceLineNo">136</span><a name="line.136"></a>
-<span class="sourceLineNo">137</span>  }<a name="line.137"></a>
-<span class="sourceLineNo">138</span>  <a name="line.138"></a>
-<span class="sourceLineNo">139</span>}<a name="line.139"></a>
+<span class="sourceLineNo">124</span>  <a name="line.124"></a>
+<span class="sourceLineNo">125</span>  @Test<a name="line.125"></a>
+<span class="sourceLineNo">126</span>  public void testContainerStartup() {<a name="line.126"></a>
+<span class="sourceLineNo">127</span>    assumeFalse(Boolean.getBoolean("skipClusterTests"));<a name="line.127"></a>
+<span class="sourceLineNo">128</span>    System.setProperty("port", "8080");<a name="line.128"></a>
+<span class="sourceLineNo">129</span>    final int oldInstanceCount = instanceCount;<a name="line.129"></a>
+<span class="sourceLineNo">130</span>    assertEquals(1, oldInstanceCount);<a name="line.130"></a>
+<span class="sourceLineNo">131</span>    Main.main(null);<a name="line.131"></a>
+<span class="sourceLineNo">132</span>    assertEquals(oldInstanceCount + 1, instanceCount);<a name="line.132"></a>
+<span class="sourceLineNo">133</span>  }<a name="line.133"></a>
+<span class="sourceLineNo">134</span><a name="line.134"></a>
+<span class="sourceLineNo">135</span>  @BeforeClass<a name="line.135"></a>
+<span class="sourceLineNo">136</span>  public static void setUpLogging() {<a name="line.136"></a>
+<span class="sourceLineNo">137</span>    System.setProperty("java.util.logging.config.file", Thread.currentThread().getContextClassLoader().getResource("logging.properties").getPath());<a name="line.137"></a>
+<span class="sourceLineNo">138</span>  }<a name="line.138"></a>
+<span class="sourceLineNo">139</span><a name="line.139"></a>
+<span class="sourceLineNo">140</span>  @Documented<a name="line.140"></a>
+<span class="sourceLineNo">141</span>  @KubernetesEventSelector<a name="line.141"></a>
+<span class="sourceLineNo">142</span>  @Qualifier<a name="line.142"></a>
+<span class="sourceLineNo">143</span>  @Retention(value = RetentionPolicy.RUNTIME)<a name="line.143"></a>
+<span class="sourceLineNo">144</span>  @Target({ ElementType.METHOD, ElementType.PARAMETER })<a name="line.144"></a>
+<span class="sourceLineNo">145</span>  private @interface AllDefaultConfigMapEvents {<a name="line.145"></a>
+<span class="sourceLineNo">146</span><a name="line.146"></a>
+<span class="sourceLineNo">147</span>  }<a name="line.147"></a>
+<span class="sourceLineNo">148</span>  <a name="line.148"></a>
+<span class="sourceLineNo">149</span>}<a name="line.149"></a>
 
 
 
